objects/NDA_RUNDA_Cadence_Authorized_Employees__c.object
<CustomObject>
    <fields>
        <fullName>Activate_Notification__c</fullName>
        <formula>Related_Agreement__r.Activate_Notification__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activate Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Detail__c</fullName>
        <formula>HYPERLINK( $Label.RVP_Notification_Forecast_URL + &quot;/&quot; + Related_Agreement__c ,  Related_Agreement__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <formula>Related_Agreement__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <description>This hold agreement status, and will be updated when agreement updated, so all workflow will be triggered.</description>
        <label>Agreement Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_confidential_information_removed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to confirm that all confidential information under this DA has been removed from your system</description>
        <inlineHelpText>Check to confirm that all confidential information under this DA has been removed from your system</inlineHelpText>
        <label>All confidential information removed ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicable_For_COD_Flow__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Applicable For COD Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Belongs_to_Current_Request__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Belongs to Current Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COD_Activation_Date__c</fullName>
        <formula>Related_Agreement__r.COD_Activation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COD Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancel_COD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel COD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DA_ExpirationDate__c</fullName>
        <label>DA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DA_Number__c</fullName>
        <formula>Related_Agreement__r.NDA_APTPS_What_is_the_DA_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DA #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted_On__c</fullName>
        <label>Deleted On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disclosure_Exchange__c</fullName>
        <label>Disclosure/Exchange</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Termination_Date_At_Cadence__c</fullName>
        <formula>Users__r.TERM_DT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Termination Date At Cadence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intel_RUNDA__c</fullName>
        <formula>TEXT(Related_Agreement__r.NDA_APTPS_Select_the_applicable_RUNDA__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intel RUNDA #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_COD_Date__c</fullName>
        <label>New COD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Related_Agreement__r.NDA_APTPS_What_is_the_project_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_of_the_Revision__c</fullName>
        <formula>IF(INCLUDES(Related_Agreement__r.NDA_APTPS_Purpose_of_the_Revision__c , &quot;New Cadence Authorized Employees&quot;), &quot;New Cadence Authorized Employees&quot;, NULL)  + BR() + 
IF(INCLUDES(Related_Agreement__r.NDA_APTPS_Purpose_of_the_Revision__c , &quot;New Data being disclosed&quot;), &quot;New Data being disclosed&quot;, NULL)  + BR() + 
IF(INCLUDES(Related_Agreement__r.NDA_APTPS_Purpose_of_the_Revision__c , &quot;New language being added&quot;), &quot;New language being added&quot;, NULL)  + BR() + 
IF(INCLUDES(Related_Agreement__r.NDA_APTPS_Purpose_of_the_Revision__c , &quot;Extending the term&quot;), &quot;Extending the term&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purpose of the Revision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>NDA RUNDA Cadence Authorized Employees</relationshipLabel>
        <relationshipName>NDA_RUNDA_Cadence_Authorized_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requester_Name__c</fullName>
        <formula>Related_Agreement__r.Agreement_Requester_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <formula>Related_Agreement__r.NDA_APTPS_Runda_Revision_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <formula>$User.FirstName+&apos; &apos;+$User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Users__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Users</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NDA_RUNDA_Cadence_Authorized_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>What_is_the_New_Term_Expiration__c</fullName>
        <formula>Related_Agreement__r.NDA_APTPS_Term_Expiration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>What is the New Term Expiration?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This tells whether records is deleted or not</description>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_15_days_mail_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is 15 days mail sent</label>
        <type>Checkbox</type>
    </fields>
    <label>NDA RUNDA Cadence Authorized Employees</label>
    <listViews>
        <fullName>CDNS_HSD_RUNDA_Team_NDA_RUNDA_Cadence_Authorized_Employees</fullName>
        <filterScope>Queue</filterScope>
        <label>CDNS HSD RUNDA Team</label>
        <queue>CDNS_HSD_RUNDA_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>NDA_RUNDA_AE-{0000}</displayFormat>
        <label>NDA RUNDA Cadence Authorized Employees N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NDA RUNDA Cadence Authorized Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>